spacing fixes

--- a/erinfox.io/css/style.css
+++ b/erinfox.io/css/style.css
@@ -16,6 +16,7 @@ body{
 
 ul {
     text-align: center;
+    padding-bottom:50px;
 }
 
 
@@ -64,7 +65,8 @@ p{
   width:100%;
   height:357px;
   border-width: 1px;
-
+  padding-bottom: 5px;
+  padding-top: 100px;
 }
 .about-section{
   width: 40%;
@@ -114,20 +116,8 @@ p{
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
-  background-color: #E8E8E8;
+/*  background-color: #E8E8E8;*/
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -141,7 +131,7 @@ p{
 display: flex;
 justify-content: center;
 align-items: flex-end;
-padding-top:5px;
+padding-top:25px;
 }
 
 .socials .linkedin {
